# cabal-build-tool-depends-solver-repro

./: README.md  cabal.project
A/: A.cabal
A/src/: AExample.hs
B/: B.cabal
B/src/: BExample.hs
C/: C.cabal
C/src/: CExample.hs
