cabal-version:      2.4
name:               A
version:            0.1.0.0

author:             Michael Peyton Jones
maintainer:         me@michaelpj.com

library 
    exposed-modules:  AExample
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite ATests
    main-is: Main.hs
    type: exitcode-stdio-1.0
    build-depends:    A, base ^>=4.14.1.0
    hs-source-dirs:   test
    default-language: Haskell2010
