cabal-version:      2.4
name:               B
version:            0.1.0.0
author:             Michael Peyton Jones
maintainer:         me@michaelpj.com

library 
    exposed-modules: BExample
    hs-source-dirs: src
    build-depends:    A, base ^>=4.14.1.0
    hs-source-dirs: src
    default-language: Haskell2010

executable BTool
    main-is:          Main.hs

    build-depends:    B, base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
