cabal-version:      2.4
name:               C
version:            0.1.0.0

author:             Michael Peyton Jones
maintainer:         me@michaelpj.com

library
    exposed-modules: CExample
    build-depends:    B, base ^>=4.14.1.0
    build-tool-depends:    B:BTool
    hs-source-dirs:   src
    default-language: Haskell2010
